<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/Background"
        android:contentDescription="@string/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BottomBar"
        android:scaleType="centerCrop"
        android:alpha="0.8"
        android:tint="#6F000000"
        android:background="@color/colorSecondaryDark"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BottomBar"
        android:background="@drawable/gradient">
    </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/AlbumViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/SongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/AlbumViewPager"
        app:layout_constraintBottom_toTopOf="@id/AlbumArtist"
        android:textColor="@color/textPrimaryColor"
        android:textSize="22sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/AlbumArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/SongTitle"
        app:layout_constraintBottom_toTopOf="@id/CurrentTime"
        android:textColor="@color/textPrimaryColor"
        android:textSize="18sp"
        android:gravity="center_horizontal|top"/>

    <TextView
        android:id="@+id/CurrentTime"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:textColor="@color/textPrimaryColor"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AlbumArtist"
        app:layout_constraintRight_toLeftOf="@id/SeekBar"
        app:layout_constraintEnd_toStartOf="@id/SeekBar"
        app:layout_constraintBottom_toTopOf="@id/BottomBar"
        android:gravity="center_vertical|end"/>

    <SeekBar
        android:id="@+id/SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/CurrentTime"
        app:layout_constraintStart_toEndOf="@id/CurrentTime"
        app:layout_constraintTop_toBottomOf="@id/AlbumArtist"
        app:layout_constraintBottom_toTopOf="@id/BottomBar"
        app:layout_constraintRight_toLeftOf="@id/TotalTime"
        app:layout_constraintEnd_toStartOf="@id/TotalTime"
        android:scaleY="5"
        android:thumb="@null"/>

    <TextView
        android:id="@+id/TotalTime"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:textColor="@color/textPrimaryColor"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/SeekBar"
        app:layout_constraintStart_toEndOf="@id/SeekBar"
        app:layout_constraintTop_toBottomOf="@id/AlbumArtist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BottomBar"
        android:gravity="center_vertical|start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BottomBar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary" >

        <ImageView
            android:id="@+id/ShufflePlaylist"
            android:src="@drawable/shuffle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/shuffleplaylist"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:tint="@color/colorSecondaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/PreviousTrack"
            app:layout_constraintRight_toLeftOf="@id/PreviousTrack"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/PreviousTrack"
            android:src="@drawable/previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/previoustrack"
            android:tint="@color/textPrimaryColor"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintLeft_toRightOf="@id/ShufflePlaylist"
            app:layout_constraintStart_toEndOf="@id/ShufflePlaylist"
            app:layout_constraintRight_toLeftOf="@id/PlayPause"
            app:layout_constraintEnd_toStartOf="@id/PlayPause"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/PlayPause"
            android:contentDescription="@string/playpause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:tint="@color/textPrimaryColor"
            app:layout_constraintLeft_toRightOf="@id/PreviousTrack"
            app:layout_constraintStart_toEndOf="@id/PreviousTrack"
            app:layout_constraintRight_toLeftOf="@id/NextTrack"
            app:layout_constraintEnd_toStartOf="@id/NextTrack"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/NextTrack"
            android:src="@drawable/skip"
            android:contentDescription="@string/nexttrack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:tint="@color/textPrimaryColor"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintLeft_toRightOf="@id/PlayPause"
            app:layout_constraintStart_toEndOf="@id/PlayPause"
            app:layout_constraintRight_toLeftOf="@id/LoopPlaylist"
            app:layout_constraintEnd_toStartOf="@id/LoopPlaylist"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <ImageView
            android:id="@+id/LoopPlaylist"
            android:contentDescription="@string/loopplaylist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintLeft_toRightOf="@id/NextTrack"
            app:layout_constraintStart_toEndOf="@id/NextTrack"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>